# ML-Visualizer

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
dataset/: synthetic.csv  synthetic_nonlinear.csv
src/: dataset.cpp  dataset.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h
